RichwoodNew/src/objects/Opportunity_Product_Category__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <referenceTo>Product_Category__c</referenceTo>
        <relationshipLabel>Opportunity Product Categories</relationshipLabel>
        <relationshipName>Opportunity_Product_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Product Category</label>
    <nameField>
        <displayFormat>OPC{00000}</displayFormat>
        <label>Opportunity Product Category</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>